Fixed short/long episode description not showing, added grid-fillers

--- a/vocativ-darknet-microsite/client/styles/episodeslibrary.scss
+++ b/vocativ-darknet-microsite/client/styles/episodeslibrary.scss
@@ -79,5 +79,13 @@ $headerDividerColor: $DARKISHGRAY;
         }
       }
     }
+
+    .grid-filler {
+      flex: 1 0 100%;
+
+      @include respond-to(medium) {
+        max-width: $gridImageWidth;
+      }
+    }
   }
 }
